# RankCrew

./: README.md  blog.html  pyproject-old.toml  pyproject.toml
src/rankcrew/: crew.py  main.py
src/rankcrew/config/: agents.yaml  tasks.yaml
src/rankcrew/tools/: #custom_tool.py#  custom_tool.py
src/rankcrewai/: crew.py  main.py
src/rankcrewai/config/: agents.yaml  tasks.yaml
src/rankcrewai/tools/: custom_tool.py
src/testcrew/: crew.py  main.py
src/testcrew/config/: agents.yaml  tasks.yaml
