[project]
name = "rankcrewai"
version = "0.1.0"
description = "RankCrewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "docling>=2.15.1",
]

[project.scripts]
rankcrewai = "rankcrewai.main:run"
run_crew = "rankcrewai.main:run"
train = "rankcrewai.main:train"
replay = "rankcrewai.main:replay"
test = "rankcrewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
