[project]
name = "rankcrew"
version = "0.1.0"
description = "rankcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
rankcrew = "rankcrew.main:run"
run_crew = "rankcrew.main:run"
train = "rankcrew.main:train"
replay = "rankcrew.main:replay"
test = "rankcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
